syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";

package zitadel.v1;

option go_package ="github.com/caos/zitadel/pkg/grpc/object";

message MetaData {
    //sequence represents the order of events. It's always upcounting
    //
    // on read: the sequence of the last event reduced by the projection
    //
    // on manipulation: the timestamp of the event(s) added by the manipulation
    uint64 sequence = 1 [
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
    //creation_date is the timestamp where the first operation on the object was made
    //
    // on read: the timestamp of the first event of the object
    //
    // on create: the timestamp of the event(s) added by the manipulation
    google.protobuf.Timestamp creation_date = 2 [
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
    //change_date is the timestamp when the object was changed
    //
    // on read: the timestamp of the last event reduced by the projection
    //
    // on manipulation: the
    google.protobuf.Timestamp change_date = 3 [
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
    //resource_owner is the organisation an object belongs to
    string resource_owner = 4 [
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
}

message Search {
    uint64 offset = 1 [
        (google.api.field_behavior) = OPTIONAL
    ];
    uint32 limit = 2 [
        (google.api.field_behavior) = REQUIRED
    ];
    bool asc = 3 [
        (google.api.field_behavior) = OPTIONAL
    ];
    uint64 total_result = 4 [
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
    uint64 processed_sequence = 5 [
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
    google.protobuf.Timestamp view_timestamp = 6 [
        (google.api.field_behavior) = OUTPUT_ONLY
    ];
}

enum TextQueryMethod {//TODO: validate
    TEXT_QUERY_METHOD_UNSPECIFIED = 0;
    TEXT_QUERY_METHOD_EQUALS = 1;
    TEXT_QUERY_METHOD_EQUALS_IGNORE_CASE = 2;
    TEXT_QUERY_METHOD_STARTS_WITH = 3;
    TEXT_QUERY_METHOD_STARTS_WITH_IGNORE_CASE = 4;
    TEXT_QUERY_METHOD_CONTAINS = 5;
    TEXT_QUERY_METHOD_CONTAINS_IGNORE_CASE = 6;
    TEXT_QUERY_METHOD_ENDS_WITH = 7;
    TEXT_QUERY_METHOD_ENDS_WITH_IGNORE_CASE = 8;
}

enum ListQueryMethod {
    LISTQUERYMETHOD_UNSPECIFIED = 0;
    //TODO: better alternatives?
    // the list must contain at least ONE of the items
    LISTQUERYMETHOD_CONTAINS_ONE = 1;
    // the list must contain ALL items
    LISTQUERYMETHOD_CONTAINS_ALL = 2;
}
